some alignments fixed

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header {
 }
 
 .name-job {
-    text-align: left;
+    text-align: center;
 }
 
 .contact-info ul {
